[package]
name = "soroban-rock-paper-scissors-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils", "soroban-auth/testutils"]

[dependencies]
soroban-sdk = "0.2.1"
soroban-auth = "0.2.1"

[dev_dependencies]
soroban-sdk = { version = "0.2.1", features = ["testutils"] }
soroban-auth = { version = "0.2.1", features = ["testutils"] }
rand = { version = "0.7.3" }

