[package]
name = "soroban-rock-paper-scissors-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
soroban-sdk = "0.6.0"

[dev_dependencies]
soroban-sdk = { version = "0.6.0", features = ["testutils"] }
rand = { version = "0.7.3" }
hex = { version = "0.3.1" }
stellar-strkey = "0.0.6"
